tests/parser/parse-fn.2.bad.error
error: Malformed function
  --> test:4:17
   |
 4 |  (define f (fn ()))
   |                  ^ expected function body
